--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -29,6 +29,16 @@
             text-align: center;
         }
 
+        .messages {
+
+            display: flex;
+            justify-content: center;
+            color: #ff4242;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+        }
+
         .btn-link {
             display: inline-block;
             margin-top: 10px;
@@ -55,11 +65,11 @@
 
     </div><!-- End Section Title -->
 
-    <div class="container form-container" data-aos="fade-up" data-aos-delay="100">
+    <div class="container" data-aos="fade-up" data-aos-delay="100">
 
 {% endblock %}
 {% block d_content %}
-
+<div class=" form-container">
             <form method="POST" class="login-form form-control" id="login-form">
                 {% csrf_token %}
                 <div class="form-group">
@@ -100,7 +110,7 @@
                     <a class="btn btn-outline-info" href="{% url 'register' %}">{% trans 'Hesabım Yok - Kayıt Ol' %}</a>
                 </div>
             </form>
-
+</div>
         </div>
 
 
