--- a/templates/users/password_reset_email.html
+++ b/templates/users/password_reset_email.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-<html lang="tr">
-Hello,
 
-You're receiving this email because you requested a password reset for your account.
+Merhaba,
 
-Please go to the following page and choose a new password:
+Bu e-postayı, hesabınız için şifre sıfırlama talebinde bulunduğunuz için alıyorsunuz.
+
+Lütfen aşağıdaki sayfaya gidin ve yeni bir şifre seçin:
 
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
-If you didn't request this, please ignore this email.
+Bunu siz talep etmediyseniz lütfen bu e-postayı dikkate almayın.
 
-Thanks,
-Your Team
-
-
-</html>
+Teşekkürler,
+Sanal Ajanda
