feat: create 2Fa - Mail Settings pages

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -33,9 +33,9 @@
 
             display: flex;
             justify-content: center;
+            align-items: center;
             color: #ff4242;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
 
         }
 
