--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -58,8 +58,8 @@
             <!-- You can delete the links only if you've purchased the pro version. -->
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
             <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a
-                href=“https://themewagon.com>ThemeWagon</a>
+            <small>by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a
+                href=“https://themewagon.com>ThemeWagon</a></small>
         </div>
     </div>
 
