--- a/templates/users/password_reset_confirm.html
+++ b/templates/users/password_reset_confirm.html
@@ -80,7 +80,7 @@
 
     <!-- Section Title -->
     <div class="container section-title" data-aos="fade-up">
-        <h2Yeni Bir Şifre Belirleyin
+        <h2>Yeni Bir Şifre Belirleyin
         </h2>
     </div><!-- End Section Title -->
 
