--- a/templates/users/profile_edit.html
+++ b/templates/users/profile_edit.html
@@ -29,12 +29,13 @@
                 <div class="col-lg-3 border-end">
                     <div class="p-4">
                         <div class="nav flex-column nav-pills">
-                            <a class="nav-link active" href="{% url 'profile' %}"><i class="fas fa-user me-2"></i>Personal
-                                Info</a>
-                            <a class="nav-link" href="{% url 'profile_security' %}"><i class="fas fa-lock me-2"></i>Security</a>
-                            <a class="nav-link" href="{% url 'profile_notifications' %}"><i class="fas fa-bell me-2"></i>Notifications</a>
-                            <a class="nav-link" href="{% url 'profile_membership' %}"><i class="fas fa-credit-card me-2"></i>Billing</a>
-                            <a class="nav-link" href="{% url 'profile_activity' %}"><i class="fas fa-chart-line me-2"></i>Activity</a>
+                            <a class="nav-link active" href="{% url 'profile' %}"><i class="fas fa-user me-2"></i>Kişisel Bilgiler</a>
+                            <a class="nav-link " href="{% url 'profile_security' %}"><i
+                                    class="fas fa-lock me-2"></i>Güvenlik ve Bildirim Ayarları</a>
+                            <a class="nav-link" href="{% url 'profile_membership' %}"><i
+                                    class="fas fa-credit-card me-2"></i>Üyelik Paketi Ayarları</a>
+                            <a class="nav-link" href="{% url 'profile_activity' %}"><i
+                                    class="fas fa-chart-line me-2"></i>Yapılan İşlemler</a>
                         </div>
                     </div>
                 </div>
